# twotty

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose-test.yaml  docker-compose.yaml
backend/.sqlx/: query-0328176ec0c66942bf7c518fe10dd928cbe3fcb229c34e3d14b5e892822da4c7.json  query-200f77407f56567cdc4cb7fd8dd52e9c5e239028a369fdd39e6e851d659b8a10.json  query-273f8e36a060985e78df3836c042dd550f31c12c912200cc6a43e72a96c2b92f.json  query-2995bb1af7b04b4b68af30a10e5d3098532e75ff46e383a218c73673f9196f41.json  query-2e9e67f05323ed0610513d6a958e33292c6ebad8827b733cdd6b3fee85146856.json  query-3a4841dc49fba7758b4da3d0ae9394606312f4a12cbf7d22ab71f1a7059f1898.json  query-411e53d071d5d69faa2ff389b2140bef928d9606fcd7ca59b52b6e53f05643fa.json  query-456065368c819cf934bacdebcd7de053fdbbe6f2bbde9b296fd89e67bc37db2e.json  query-4ca233a290ddd5241cd622beaabc6c2bff04267acc3cbf8e55dd1d77172204fd.json  query-535c5a9c5c23f05d6bac0989b4f3754954bba712fbedf22ae0b652ccbefbaeb2.json  query-57c01feda4db7ec4ff9510d64588cf1369606af0ed4634bbd64112d82ed2219f.json  query-6061c4a0a75425a2559c03478e0efd6ee755350b52ef282b94a82afd35c9ed3a.json  query-7bf950d20ed530fd711993c065491cf40ee109455bc66d1b1b80f330aebfdaa2.json  query-7d6ef6e09b34e2408e24f056f6401f3a6483f65b0746fc66c835195836e4f87a.json  query-8ae9363ce6e796c3982699a977052b042b7dff31eb04fb5a90004e348de6b424.json  query-959d39bd16eb59e2b373c7ee60e858195d03c91f83bd8aabdf295ac511884fa4.json  query-966fef81d6898730ebb325b36f6b84ff1565077ac8f5a5730d971bcc97bfcee7.json  query-a0edfc1042c7285fcc89769207ad3d749ec7e2922dd37f93469764d5072b167f.json  query-a1d8721b0359801d958650b8b6abf3a55a2896ff4000b439932a6c0cc28f89a3.json  query-a464f494b7eb6155e099a84dd4655a7f5ea032a938368356d067fbd2ae2f05b6.json  (+5 more)
backend/app/: Cargo.toml
backend/app/src/: config.rs  db.rs  lib.rs  main.rs  state.rs
backend/app/src/models/: following.rs  post.rs  task.rs  user.rs
backend/app/src/repositories/: following.rs  mod.rs  post.rs  user.rs
backend/app/src/routes/: auth.rs  mod.rs  posts.rs  users.rs
backend/app/src/schemas/: auth.rs  mod.rs  post.rs  user.rs
backend/app/src/services/: following.rs  mod.rs  post.rs  user.rs
backend/app/src/utils/: auth.rs  errors.rs  mod.rs  validator.rs
backend/migrations/: 20240612062225_user.sql  (+10 more)
frontend/: .env.example  next.config.mjs  package.json  pnpm-lock.yaml
(+27 files in other folders)
