[package]
name = "twotty"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.7.5"
jsonwebtoken = "9.3.0"
dotenvy = "0.15.7"
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "sqlx-postgres"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

utoipa = { version="5.0.0-alpha.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "7.1.1-alpha.0", features = ["axum"] }
utoipa-scalar = { version = "0.2.0-alpha.0", features = ["axum"] }

migration = {path = "../migration" }
tower = "0.4.13"
http-body-util = "0.1.1"
mime = "0.3.17"

config = "0.14.0"
thiserror = "1.0.61"
async-trait = "0.1.80"
validator = { version = "0.18.1", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4"] }
bcrypt = "0.15.1"
once_cell = "1.19.0"
chrono = "0.4.38"
