[package]
name = "twotty"
version = "0.3.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7.5", features = ["tracing"] }
jsonwebtoken = "9.3.0"
dotenvy = "0.15.7"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

utoipa = { version="5.0.0-alpha.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7.1.1-alpha.0", features = ["axum"] }
utoipa-scalar = { version = "0.2.0-alpha.0", features = ["axum"] }

tower = "0.4.13"
http-body-util = "0.1.1"
mime = "0.3.17"

config = "0.14.0"
thiserror = "1.0.61"
async-trait = "0.1.80"
validator = { version = "0.18.1", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
once_cell = "1.19.0"
